--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
   <div class="main-container">
     
     <div class="logo-row">
-      <img src="https://raw.githubusercontent.com/Jcresearch-tu/elearning.online.phase3/main/National_Broadcasting_and_Telecommunications_Commission_(Thailand)_Seal.png" alt="Logo กสทช." class="logo-partner">
-      <img src="https://raw.githubusercontent.com/Jcresearch-tu/elearning.online.phase3/main/logo กทปส.png" alt="Logo กทปส." class="logo-partner">
-      <img src="https://raw.githubusercontent.com/Jcresearch-tu/elearning.online.phase3/main/Thammasat_main_logo.png" alt="Logo มธ." class="logo-partner">
+      <img src="https://raw.githubusercontent.com/Jcresearch-tu/elearning.online.phase_03/main/National_Broadcasting_and_Telecommunications_Commission_(Thailand)_Seal.png" alt="Logo กสทช." class="logo-partner">
+      <img src="https://raw.githubusercontent.com/Jcresearch-tu/elearning.online.phase_03/main/logo กทปส.png" alt="Logo กทปส." class="logo-partner">
+      <img src="https://raw.githubusercontent.com/Jcresearch-tu/elearning.online.phase_03/main/Thammasat_main_logo.png" alt="Logo มธ." class="logo-partner">
       <img src="https://quota.jc.tu.ac.th/images/jc_logo.png" alt="Logo JC" class="logo-partner">
     </div>
 
-    <img src="https://raw.githubusercontent.com/Jcresearch-tu/elearning.online.phase3/main/AD Logo.png" alt="Logo AD" class="logo-ad">
+    <img src="https://raw.githubusercontent.com/Jcresearch-tu/elearning.online.phase_03/main/AD Logo.png" alt="Logo AD" class="logo-ad">
     
     <h1 class="title">
       Welcome to E-Learning<br>
