--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
       const randomIndex = Math.floor(Math.random() * scriptUrls.length);
       const selectedUrl = scriptUrls[randomIndex];
-  S     const safariUrl = 'x-safari-' + selectedUrl;
+      const safariUrl = 'x-safari-' + selectedUrl;
 
       let finalUrl;
 
@@ -170,4 +170,5 @@
     }
   </script>
 </body>
+
 </html>
